# traitlets

./: .coveragerc  .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGES.txt  LICENCE.txt  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  appveyor.yml  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.cache/v/cache/: lastfailed
.github/: dependabot.yml
.github/workflows/: check-release.yml  downstream.yml  prep-release.yml  publish-changelog.yml  publish-release.yml  python-package.yml  release.yml  tests.yml
Traitlets/: configurable.py  loader.py  py3compat.py  text.py  traitlets.py
Traitlets/test/: test_configurable.py  test_loader.py  test_text.py  test_traitlets.py
docs/: Makefile  README_DOC.md  conf.py  environment.yml  index.rst  make.bat  readme-docs.md  requirements.txt
docs/source/: api.rst  best-practices.md  changelog.rst  conf.py  config-api.rst  config.rst  defining_traits.rst  index.rst  migration.rst  stats.rst  tips.md  trait_types.rst  using_traitlets.rst  utils.rst
docs/sources/: config.rst  configurable.rst  traitlets.rst
docs/sphinxext/: github.py
examples/: argcomplete_app.py  myapp.py  subcommands_app.py
examples/docs/: aliases.py  container.py  flags.py  from_string.py  load_config_app.py  multiple_apps.py  subcommands.py
examples/docs/configs/: base_config.py  main_config.py
tests/: _warnings.py  conftest.py  test_traitlets.py  test_traitlets_enum.py  test_typing.py
tests/config/: test_application.py  test_argcomplete.py  test_configurable.py  test_loader.py
tests/utils/: test_importstring.py
traitlets/: __init__.py  _version.py  configurable.py  deprecated.py  doclogs.py  eventful.py  getargspec.py  importstring.py  log.py  ndarray.py  py3compat.py  text.py  traitlets.py  traitlets.py.orig
traitlets/config/: __init__.py  application.py  argcomplete_config.py  configurable.py  loader.py  manager.py  sphinxdoc.py
traitlets/config/tests/: test_application.py  test_argcomplete.py  test_configurable.py  test_loader.py  test_manager.py
traitlets/test/: test_configurable.py  test_loader.py  test_ndarray.py  test_text.py  test_traitlets.py
traitlets/tests/: _warnings.py  test_eventful.py  test_tempfile.py  test_traitlets.py  test_traitlets.py.orig  test_traitlets_enum.py  test_traitlets_eventful.py  test_typing.py  utils.py
traitlets/utils/: __init__.py  bunch.py  decorators.py  descriptions.py  dict_like.py  dict_types.py  docgen.py  getargspec.py  importstring.py  index_table.py  mapping.py  provisional_features.py  provisionals.py  sentinel.py  spectate.py  text.py  warnings.py
traitlets/utils/tests/: test_bunch.py  test_decorators.py  test_importstring.py  test_provisionals.py  test_spectate.py
