[build-system]
requires = ["hatchling >=1.5"]
build-backend = "hatchling.build"

[project]
name = "traitlets"
authors = [{name = "IPython Development Team", email = "ipython-dev@python.org"}]
description = "Traitlets Python configuration system"
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["Interactive", "Interpreter", "Shell", "Web"]
classifiers = [
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ipython/traitlets"
Documentation = "https://traitlets.readthedocs.io"
Source = "https://github.com/ipython/traitlets"
Funding = "https://numfocus.org"
Tracker = "https://github.com/ipython/traitlets/issues"

[project.optional-dependencies]
test = [
    "argcomplete>=3.0.3",
    "mypy>=1.6.0",
    "pre-commit",
    "pytest-mock",
    "pytest-mypy-testing",
    "pytest>=7.0,<7.5",
]
docs = [
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx"
]

[tool.hatch.version]
path = "traitlets/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.docs]
features = ["docs"]
[tool.hatch.envs.docs.scripts]
build = "make -C docs html SPHINXOPTS='-W'"

[tool.hatch.envs.test]
features = ["test"]
[tool.hatch.envs.test.scripts]
test = "python -m pytest -vv {args}"
nowarn = "test -W default {args}"

[tool.hatch.envs.cov]
features = ["test"]
dependencies = ["coverage[toml]", "pytest-cov"]
[tool.hatch.envs.cov.scripts]
test = "python -m pytest -vv --cov traitlets --cov-branch --cov-report term-missing:skip-covered {args}"
nowarn = "test -W default {args}"

[tool.hatch.envs.typing]
features = ["test"]
[tool.hatch.envs.typing.scripts]
test = "mypy --install-types --non-interactive {args}"

[tool.hatch.envs.lint]
dependencies = ["black==23.3.0", "mdformat>0.7", "ruff==0.1.1"]
detached = true
[tool.hatch.envs.lint.scripts]
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
  "mdformat --check {args:docs *.md}"
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "mdformat {args:docs *.md}"
]

[tool.mypy]
files = "traitlets"
python_version = "3.8"
strict = false
check_untyped_defs = true
disallow_any_generics = false
disable_error_code = ["no-untyped-call"]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
no_implicit_reexport = false
pretty = true
show_error_context = true
show_error_codes = true
warn_return_any = false
warn_unreachable = true
exclude = ["examples/docs/configs", "traitlets/tests/test_typing.py"]

[tool.pytest.ini_options]
minversion = "6.0"
xfail_strict = true
log_cli_level = "info"
addopts = [
  "-raXs", "--durations=10", "--color=yes", "--doctest-modules",
   "--showlocals", "--strict-markers", "--strict-config",
   "--ignore-glob=tests/dotipython*"
]
testpaths = [
    "tests",
    "examples",
]
filterwarnings = [
    "ignore",
    "ignore:Passing unrecognized arguments",
    "ignore:Keyword .* is deprecated",
    "ignore:Supporting extra quotes around",
    "ignore:DeprecatedApp._config_changed is deprecated in traitlets",
    "ignore:A parent of DeprecatedApp._config_changed has adopted",
    "ignore:KeyValueConfigLoader is deprecated since Traitlets",
    "ignore:Traits should be given as instances",
    "ignore:Explicit using of Undefined as",
    "ignore:on_trait_change is deprecated",
    "ignore:.*use @observe and @unobserve instead",
    "ignore:.*for no default is deprecated in traitlets",
    "ignore:.*use @validate decorator instead",
    "ignore:.*has adopted the new \\(traitlets 4.1\\) @observe\\(change\\) API",
    "ignore:.*will be removed in Jinja 3.1.:DeprecationWarning",
    "ignore: the imp module is deprecated in favour of importlib",
    "ignore:IPython.core.inputsplitter is deprecated since IPython 7 in favor of `IPython.core.inputtransformer2`:DeprecationWarning",
    "ignore:pyee.EventEmitter is deprecated and will be removed in a future major version", # you should instead use either pyee.AsyncIOEventEmitter, pyee.TwistedEventEmitter, pyee.ExecutorEventEmitter, pyee.TrioEventEmitter, or pyee.BaseEventEmitter.:DeprecationWarning
    "ignore:Your element with mimetype.*",
]
markers = [
    "network: marks tests which require network connection (nbconvert)",
    "integration_tests: notebook mark (notebook)",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\bProtocol\\):",
"@(abc\\.)?abstractmethod",
]

[tool.coverage.run]
relative_files = true
source = ["traitlets"]

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py37"]

[tool.ruff]
target-version = "py37"
line-length = 100
select = [
  "A", "ANN", "B", "C", "E", "F", "FBT", "I", "N", "Q", "RUF", "S", "T",
  "UP", "W", "YTT",
]
ignore = [
  # Dynamically typed expressions (typing.Any) are disallowed in `key`
  "ANN401",
  # Missing type annotation for `self` in method
  "ANN101",
  #  Missing type annotation for `cls` in classmethod
  "ANN102",
  # ANN202 Missing return type annotation for private function
  "ANN202",
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Ignore McCabe complexity
  "C901",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Use of `assert` detected
  "S101",
  # Line too long
  "E501",
  # Relative imports are banned
  "TID252",
  # Boolean ... in function definition
  "FBT001", "FBT002",
  # Module level import not at top of file
  "E402",
  # A001/A002/A003 .. is shadowing a python builtin
  "A001", "A002", "A003",
  # Possible hardcoded password
  "S105", "S106",
  # Q000 Single quotes found but double quotes preferred
  "Q000",
  # N806 Variable `B` in function should be lowercase
  "N806",
  # T201 `print` found
  "T201",
  # N802 Function name `CreateWellKnownSid` should be lowercase
  "N802", "N803",
  # C408 Unnecessary `dict` call (rewrite as a literal)
  "C408",
  # N801 Class name `directional_link` should use CapWords convention
  "N801",
  # S110 `try`-`except`-`pass` detected
  "S110",
  # RUF012 Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF012",
]
unfixable = [
  # Don't touch print statements
  "T201",
  # Don't touch noqa lines
  "RUF100",
]

[tool.ruff.per-file-ignores]
# B011 Do not call assert False since python -O removes these calls
# F841 local variable 'foo' is assigned to but never used
# C408 Unnecessary `dict` call
# E402 Module level import not at top of file
# T201 `print` found
# B007 Loop control variable `i` not used within the loop body.
# N802 Function name `assertIn` should be lowercase
# F841 Local variable `t` is assigned to but never used
# B018 Found useless expression
# S301 `pickle` and modules that wrap..."
"tests/*" = ["ANN", "B011", "F841", "C408", "E402", "T201", "B007", "N802", "F841",
                       "B018", "S301"]
# B003 Assigning to os.environ doesn't clear the environment
"tests/config/*" = ["B003", "B018", "S301"]
# F401 `_version.__version__` imported but unused
# F403 `from .traitlets import *` used; unable to detect undefined names
"traitlets/*__init__.py" = ["F401", "F403"]
"docs/*" = ["ANN"]
"examples/*" = ["ANN"]

[tool.repo-review]
ignore = ["PY007", "PP308", "GH102", "PC140", "MY101"]
